--- a/pursuit/Abbas Ali/Views/JobCreation.storyboard
+++ b/pursuit/Abbas Ali/Views/JobCreation.storyboard
@@ -1243,7 +1243,7 @@
         <!--Navigation Controller-->
         <scene sceneID="gPk-iy-vAY">
             <objects>
-                <navigationController storyboardIdentifier="JobsEmployer" automaticallyAdjustsScrollViewInsets="NO" id="AKk-zZ-kJE" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="JobCreation" automaticallyAdjustsScrollViewInsets="NO" id="AKk-zZ-kJE" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="iiy-sO-ONx">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
