--- a/pursuit/Views/EmployerBase/BaseEmployer.storyboard
+++ b/pursuit/Views/EmployerBase/BaseEmployer.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -37,10 +37,10 @@
             </objects>
             <point key="canvasLocation" x="-954" y="-583"/>
         </scene>
-        <!--JobsEmployer-->
+        <!--JobCreation-->
         <scene sceneID="bNt-oj-Rh9">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="JobsEmployer" storyboardName="JobCreation" referencedIdentifier="JobsEmployer" id="sq9-AN-clp" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="JobsEmployer" storyboardName="JobCreation" referencedIdentifier="JobCreation" id="sq9-AN-clp" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Kve-vc-E8I"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o73-bh-MbF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
